<resources>
    <string name="app_name">TexiCall</string>
    <string name="logo">Logo</string>
    <string name="welcome">Welcome</string>
    <string name="phone_number">請輸入手機號碼</string>
    <string name="password">密碼</string>
    <string name="passenger_sign_in">乘客登入</string>
    <string name="passenger_sign_up">乘客註冊</string>

    <string name="sign_up_user_name">姓名</string>
    <string name="sign_up_phone">手機號碼</string>
    <string name="sign_up_password">密碼</string>
    <string name="sign_up_mail">信箱</string>

    <string name="forgot_password">忘記密碼</string>

    <string name="title_activity_passenger__menu_">帳戶主選單(暫訂)</string>
    <string name="title_activity_passenger__info_">帳戶資訊</string>
    <string name="title_activity_passenger__edit_mail">變更信箱</string>
    <string name="title_activity_passenger__edit_password">變更密碼</string>
    <string name="title_activity_passenger__edit_username">變更用戶名稱</string>
    <string name="title_activity_passenger__customer">客服系統</string>
    <string name="title_activity_passenger__sent_car_record">乘車紀錄</string>
    <string name="title_activity_passenger__car_service">派車服務</string>
    <string name="title_activity_passenger__fares">車資試算</string>
    <string name="title_activity_passenger__on_the_way">派車中</string>
    <string name="title_activity_passenger__contact_driver">司機已抵達</string>
    <string name="title_activity_passenger__in_the_shuttle">載送中</string>
    <string name="title_activity_driver__travel_record">行程紀錄</string>
    <string name="title_activity_driver__point_record">點數紀錄</string>
    <string name="title_activity_driver__info">帳號資訊</string>
    <string name="title_activity_driver__passenger_request">乘客需求</string>
    <string name="title_activity_driver__on_the_way">前往中</string>
    <string name="title_activity_driver__arrived">已抵達上車地點</string>
    <string name="title_activity_driver__trip_done">行程已完成</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_driver__travel__record_">Driver_Travel_Record_Activity</string>


</resources>
