<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sign_in_flow"
    >

    <TextView
        android:id="@+id/passenger_sign_up_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:text="@string/passenger_sign_up"
        android:textSize="48sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_sign_up"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/sign_up_user_name"
            android:drawableStart="@drawable/ic_username_signuppage"
            android:drawablePadding="17dp"
            android:background="@android:color/transparent"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_sign_up"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/sign_up_phone"
            android:inputType="number"
            android:drawableStart="@drawable/ic_id_cellphone_signuppage"
            android:drawablePadding="17dp"
            android:background="@android:color/transparent"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_sign_up"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/sign_up_password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_password_signuppage"
            android:drawablePadding="17dp"
            android:background="@android:color/transparent"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_sign_up"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/sign_up_mail"
            android:drawableStart="@drawable/ic_mail_signuppage"
            android:drawablePadding="17dp"
            android:background="@android:color/transparent"
            />
    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/btn_signup_disabled_signuppage"
        android:background="?android:selectableItemBackground"
        />

</LinearLayout>
